Configured vite base for deploymet

--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,10 @@
 html {
     scroll-behavior: smooth;
   }
+
+body {
+  /* hide horizontal scrollbar */
+  overflow-x: hidden;     
+  overflow-y: auto;
+}
   
